# routes/api.php
@@ -7,6 +7,7 @@ use Illuminate\Support\Facades\Hash;
 use App\Http\Controllers\CompteController;
 use App\Http\Controllers\AuthController;
 use App\Http\Controllers\TransactionController;
+use App\Http\Controllers\AdminTransactionController;
 use App\Models\User;
 
 /*
@@ -33,6 +34,7 @@ Route::middleware(['auth.api_cookie'])->group(function () {
                 Route::post('/comptes/{id}/bloquer', [CompteController::class, 'block']);
                 Route::post('/comptes/{id}/debloquer', [CompteController::class, 'unblock']);
                 Route::get('/admin/comptes/{id}/transactions', [TransactionController::class, 'showByCompte']);
+                Route::post('/admin/transactions', [AdminTransactionController::class, 'store']);
             });
             Route::delete('/comptes/{id}', [CompteController::class, 'destroy']);
         });
